# portable_framework

./: LICENSE
modular_sensor_actuator/: .gitignore  CMakeLists.txt  README.md  sdkconfig  test_run.sh
modular_sensor_actuator/build_test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  ultrasonic_tests  ultrasonic_tests[1]_include.cmake  ultrasonic_tests[1]_tests.cmake
modular_sensor_actuator/components/my_hal/: CMakeLists.txt
modular_sensor_actuator/components/my_hal/esp32/: esp32.c  esp32.h  esp32_uart.c  esp32_uart.h
modular_sensor_actuator/components/my_hal/include/: hal.h  hal_uart.h
modular_sensor_actuator/components/my_hal/src/: hal.c  hal_uart.c
modular_sensor_actuator/components/osal/: CMakeLists.txt
modular_sensor_actuator/components/osal/freertos/: freertos.c  freertos.h
modular_sensor_actuator/components/osal/include/: osal.h
modular_sensor_actuator/components/osal/src/: osal.c
modular_sensor_actuator/main/: CMakeLists.txt  main.c  utils.h
modular_sensor_actuator/main/ultrasonic/: US100.c  ultrasonic.h
modular_sensor_actuator/test/: CMakeLists.txt  hal_wrapper.hpp  test_keys.hpp  ultrasonic_test.cpp  ultrasonic_test.hpp
